Add menu section for navigation buttons
Added a new menu section with buttons for navigation.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <section id="posttest" class="content-section"></section>
     <section id="evaluasi" class="content-section"></section>
   </main>
+  
+<div class="menu">
+  <button onclick="showSection('pretest')">Pre-Test</button>
+  <button onclick="showSection('materi')">Materi</button>
+  <button onclick="showSection('posttest')">Post-Test</button>
+  <button onclick="showSection('evaluasi')">Penilaian</button>
+</div>
 
   <footer>
     <p>&copy; 2025 Intelligent Tutoring System | Turunan Fungsi</p>
@@ -33,3 +40,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
