--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <p>&copy; 2025 Intelligent Tutoring System | Turunan Fungsi</p>
   </footer>
 
-  <script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
 </body>
 </html>
+
+
 
