Add navigation buttons to index.html
Added navigation buttons for pre-test, materi, post-test, and evaluasi sections.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <h2>Turunan Fungsi - SMA Kelas XII</h2>
   </header>
 
+  <nav>
+    <button onclick="showSection('pretest')">Pre-Test</button>
+    <button onclick="showSection('materi')">Materi</button>
+    <button onclick="showSection('posttest')">Post-Test</button>
+    <button onclick="showSection('evaluasi')">Penilaian</button>
+  </nav>
+
   <main>
     <section id="pretest" class="content-section"></section>
     <section id="materi" class="content-section"></section>
@@ -23,13 +30,6 @@
     <p>&copy; 2025 Intelligent Tutoring System | Turunan Fungsi</p>
   </footer>
 
-
-<script src="script.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
